-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.1
-
None
-
3
-
9223372036854775807
In LU-9120 handling device failure, but the following IB events cannnot be handlled by QP event handler.
- IB_EVENT_DEVICE_FATAL
- IB_EVENT_PORT_ERR
- IB_EVENT_PORT_ACTIVE
We are implementing IB event handler which handles device errors such as hardware errors and link down. By using this IB event handler, we intend to detect these fatal device errors.
We will make a patch in a few week.
- mentioned in
-
Page Loading...